@@ -1,0 +1,1 @@
+Fixed: laser guidance for MQ-9 Reaper's Hellfire (http://dev.withsix.com/issues/70991)
