@@ -1,3 +1,9 @@
+23/01/2017
+
+Fixed:
+	laser guidance for MQ-9 Reaper's Hellfire (http://dev.withsix.com/issues/70991)
+
+
 21/01/2017
 
 Fixed:
